menu bug mais ca marche

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -6,6 +6,10 @@
     "lines": "Lines",
     "replacements": "Replacements",
     "timesheets": "Timesheets",
+    "organisation": "Organization",
+    "analyze": "Analyze",
+    "request": "Request",
+    "parameters": "Parameters",
     "summary": "Summary",
     "details": "Details",
     "profile": "Profile",
