--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -6,6 +6,9 @@
     "lines": "Lignes",
     "replacements": "Remplacements",
     "timesheets": "Feuilles de temps",
+    "analyze": "Analyser",
+    "request": "Requête",
+    "parameters": "Paramètres",
     "summary": "Sommaire",
     "details": "Détails",
     "profile": "Profil",
