menu content and structure is updated

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -3,6 +3,7 @@
     "planning": "Planning",
     "dashboard": "Dashboard",
     "schedules": "Schedules",
+    "scheduleProccess": "Scheduling Process",
     "lines": "Lines",
     "replacements": "Replacements",
     "timesheets": "Timesheets",
@@ -13,5 +14,21 @@
     "summary": "Summary",
     "details": "Details",
     "profile": "Profile",
-    "about": "About"
+    "about": "About",
+    "order": "Orders",
+    "period": "Period",
+    "correction": "Adjustments",
+    "batchEntry": "Batch Entry",
+    "history": "History",
+    "employees": "Employees",
+    "hierarchy": "Hierarchy",
+    "reports": "Reports",
+    "publication": "Publications",
+    "list": "List",
+    "replacementsByEmployee": "Replacements By Employees",
+    "quartRequirements": "Shift Requirements",
+    "masterSchedules": "Master Schedule",
+    "positions": "Positions",
+    "project": "Projects",
+    "simplifiedAbscence": "Simplified Abscence"
 }
