--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -3,6 +3,7 @@
     "planning": "Planification",
     "dashboard": "Dashboard",
     "schedules": "Horaires",
+    "scheduleProccess": "Processus Horaires",
     "lines": "Lignes",
     "replacements": "Remplacements",
     "timesheets": "Feuilles de temps",
@@ -12,5 +13,22 @@
     "summary": "Sommaire",
     "details": "Détails",
     "profile": "Profil",
-    "about": "À propos"
+    "about": "À propos",
+    "order": "Commandes",
+    "period": "Période",
+    "correction": "Ajustements",
+    "batchEntry": "Entrée en lot",
+    "history": "Historique",
+    "employees": "Employés",
+    "hierarchy": "Hiérarchie",
+    "reports": "Rapports",
+    "publication": "Publication",
+    "list": "Liste",
+    "declaration": "Déclaration",
+    "replacementsByEmployee": "Remplacements par employés",
+    "quartRequirements": "Besoins par quarts",
+    "masterSchedules": "Horaires Maitres",
+    "positions": "Position",
+    "project": "Projets",
+    "simplifiedAbscence": "Abscence simplifiée"
 }
