added template page reste des trucs a regler dans le route pis le menu a droite a ajouter. reste aussi a changer mon store pour que le menu puisse gerer plusieurs trucs

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1,7 +1,7 @@
 {
     "language": "Langue",
     "planning": "Planification",
-    "dashboard": "Dashboard",
+    "dashboard": "Tableau de bord",
     "schedules": "Horaires",
     "scheduleProccess": "Processus Horaires",
     "lines": "Lignes",
