--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,34 +1,78 @@
 {
-    "language": "Language",
-    "planning": "Planning",
-    "dashboard": "Dashboard",
-    "schedules": "Schedules",
-    "scheduleProccess": "Scheduling Process",
-    "lines": "Lines",
-    "replacements": "Replacements",
-    "timesheets": "Timesheets",
-    "organisation": "Organization",
-    "analyze": "Analyze",
-    "request": "Request",
-    "parameters": "Parameters",
-    "summary": "Summary",
-    "details": "Details",
-    "profile": "Profile",
     "about": "About",
-    "order": "Orders",
-    "period": "Period",
-    "correction": "Adjustments",
+    "analyze": "Analyze",
     "batchEntry": "Batch Entry",
-    "history": "History",
+    "correction": "Adjustments",
+    "dashboard": "Dashboard",
+    "declaration": "Declaration",
+    "details": "Details",
     "employees": "Employees",
     "hierarchy": "Hierarchy",
-    "reports": "Reports",
-    "publication": "Publications",
+    "history": "History",
+    "language": "Language",
+    "lines": "Lines",
     "list": "List",
-    "replacementsByEmployee": "Replacements By Employees",
-    "quartRequirements": "Shift Requirements",
     "masterSchedules": "Master Schedule",
+    "order": "Orders",
+    "organisation": "Organization",
+    "parameters": "Parameters",
+    "period": "Period",
+    "planning": "Planning",
     "positions": "Positions",
+    "profile": "Profile",
     "project": "Projects",
-    "simplifiedAbscence": "Simplified Abscence"
+    "publication": "Publications",
+    "quartRequirements": "Shift Requirements",
+    "replacements": "Replacements",
+    "replacementsByEmployee": "Replacements By Employees",
+    "reports": "Reports",
+    "request": "Request",
+    "scheduleProccess": "Scheduling Process",
+    "schedules": "Schedules",
+    "simplifiedAbscence": "Simplified Abscence",
+    "summary": "Summary",
+    "timesheets": "Timesheets",
+
+    "features": {
+        "planning": {
+            "title": "Planning",
+            "dashboard": "Dashboard",
+            "schedules": "Schedules",
+            "scheduleProccess": "Scheduling Process",
+            "lines": "Lines",
+            "replacements": "Replacements",
+            "replacementsByEmployee": "Replacements By Employees",
+            "quartRequirements": "Shift Requirements",
+            "masterSchedules": "Master Schedule",
+            "order": "Orders",
+            "positions": "Positions",
+            "project": "Projects"
+        },
+        "timesheets": {
+            "title": "Timesheets",
+            "dashboard": "Dashboard",
+            "summary": "Summary",
+            "details": "Details",
+            "period": "Period",
+            "correction": "Adjustments",
+            "batchEntry": "Batch Entry",
+            "history": "History"
+        },
+        "organisation": {
+            "title": "Organization",
+            "employees": "Employees",
+            "hierarchy": "Hierarchy"
+        },
+        "analyze": {
+            "title": "Analyze",
+            "publication": "Publication",
+            "reports": "Reports"
+        },
+        "request": {
+            "title": "Requests",
+            "list": "List",
+            "declaration": "Declaration",
+            "simplifiedAbscence": "Simplified Abscence"
+        }
+    }
 }
