--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1,34 +1,78 @@
 {
-    "language": "Langue",
-    "planning": "Planification",
-    "dashboard": "Tableau de bord",
-    "schedules": "Horaires",
-    "scheduleProccess": "Processus Horaires",
-    "lines": "Lignes",
-    "replacements": "Remplacements",
-    "timesheets": "Feuilles de temps",
-    "analyze": "Analyser",
-    "request": "Requête",
-    "parameters": "Paramètres",
-    "summary": "Sommaire",
-    "details": "Détails",
-    "profile": "Profil",
     "about": "À propos",
-    "order": "Commandes",
-    "period": "Période",
-    "correction": "Ajustements",
+    "analyze": "Analyser",
     "batchEntry": "Entrée en lot",
-    "history": "Historique",
+    "correction": "Ajustements",
+    "dashboard": "Tableau de bord",
+    "declaration": "Déclaration",
+    "details": "Détails",
     "employees": "Employés",
     "hierarchy": "Hiérarchie",
-    "reports": "Rapports",
-    "publication": "Publication",
+    "history": "Historique",
+    "language": "Langue",
+    "lines": "Lignes",
     "list": "Liste",
-    "declaration": "Déclaration",
-    "replacementsByEmployee": "Remplacements par employés",
-    "quartRequirements": "Besoins par quarts",
     "masterSchedules": "Horaires Maitres",
+    "order": "Commandes",
+    "organisation": "Organization",
+    "parameters": "Paramètres",
+    "period": "Période",
+    "planning": "Planification",
     "positions": "Position",
+    "profile": "Profil",
     "project": "Projets",
-    "simplifiedAbscence": "Abscence simplifiée"
+    "publication": "Publication",
+    "quartRequirements": "Besoins par quarts",
+    "replacements": "Remplacements",
+    "replacementsByEmployee": "Remplacements par employés",
+    "reports": "Rapports",
+    "request": "Requête",
+    "scheduleProccess": "Processus Horaires",
+    "schedules": "Horaires",
+    "simplifiedAbscence": "Abscence simplifiée",
+    "summary": "Sommaire",
+    "timesheets": "Feuilles de temps",
+
+    "features": {
+        "planning": {
+            "title": "Planification",
+            "dashboard": "Tableau de bord",
+            "schedules": "Horaires",
+            "scheduleProccess": "Processus Horaires",
+            "lines": "Lignes",
+            "replacements": "Remplacements",
+            "replacementsByEmployee": "Remplacements par employés",
+            "quartRequirements": "Besoins par quarts",
+            "masterSchedules": "Horaires Maitres",
+            "order": "Commandes",
+            "positions": "Position",
+            "project": "Projets"
+        },
+        "timesheets": {
+            "title": "Feuilles de temps",
+            "dashboard": "Tableau de bord",
+            "summary": "Sommaire",
+            "details": "Détails",
+            "period": "Période",
+            "correction": "Ajustements",
+            "batchEntry": "Entrée en lot",
+            "history": "Historique"
+        },
+        "organisation": {
+            "title": "Organisation",
+            "employees": "Employés",
+            "hierarchy": "Hiérarchie"
+        },
+        "analyze": {
+            "title": "Analyser",
+            "publication": "Publication",
+            "reports": "Rapports"
+        },
+        "request": {
+            "title": "Requête",
+            "list": "Liste",
+            "declaration": "Déclaration",
+            "simplifiedAbscence": "Abscence simplifiée"
+        }
+    }
 }
