--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -74,5 +74,10 @@
             "declaration": "Déclaration",
             "simplifiedAbscence": "Abscence simplifiée"
         }
+    },
+
+    "menus": {
+        "pin": "Épingler le menu",
+        "unpin": "Détacher le menu"
     }
 }
