added ribbon for planning

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -78,5 +78,10 @@
     "menus": {
         "pin": "Pin menu",
         "unpin": "Unpin menu"
+    },
+    "ribbon": {
+        "todo": "Weekly process",
+        "today": "Today",
+        "planif": "Prevision"
     }
 }
